--- a/package.json
+++ b/package.json
@@ -39,15 +39,17 @@
     "optimist": "~0.6.0"
   },
   "devDependencies": {
+    "browserify": "^8.0.3",
+    "coffeeify": "^1.0.0",
     "grunt": "~0.4.2",
-    "grunt-regarde": "~0.1.1",
-    "grunt-jasmine-node": "~0.1.0",
-    "jasmine-node": "~1.12.0",
-    "matchdep": "~0.3.0",
-    "browserify": "~1.17.3",
+    "grunt-browserify": "^3.2.1",
     "grunt-contrib-uglify": "~0.2.7",
+    "grunt-jasmine-node": "~0.1.0",
+    "grunt-regarde": "~0.1.1",
+    "grunt-shell": "~0.6.1",
     "grunt-text-replace": "~0.3.10",
-    "grunt-shell": "~0.6.1"
+    "jasmine-node": "~1.12.0",
+    "matchdep": "~0.3.0"
   },
   "homepage": "https://github.com/netzpirat/haml-coffee",
   "repository": {
