--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
       "url": "http://github.com/netzpirat/haml-coffee/raw/master/LICENSE"
     }
   ],
-  "browserify": "./src/haml-coffee",
+  "browserify": {
+    "transform": ["coffeeify"]
+  },
   "engines": {
     "node": ">=0.4.0"
   },
